# esp32_zephyr_app

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: esp32_devkitc_procpu.overlay
include/: ds18b20.h  events.h  led.h  udp_socket.h  wifi.h
src/: ds18b20.c  events.c  led.c  main.c  udp_socket.c  wifi.c
test/integration/: socket_listener.py
utils/: format.sh
